bima/ingress.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: app
  namespace: opty
spec:
  selector:
    app: bima
  ports:
    - protocol: TCP
      port: 4000
      name: web

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bima
  namespace: opty
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - bima.getopty.com
    secretName: bima-tls-secret
  rules:
  - host: bima.getopty.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app
          servicePort: web
